fixed navbar jumps

--- a/css/style.css
+++ b/css/style.css
@@ -199,6 +199,10 @@ section.callaction {
 	padding-top: 5em;
 }
 
+#flavours {
+	padding-top: 5em;
+}
+
 /* --- Call to action --- */
 
 .cta-text {
